add docker-compose start project

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,38 +1,92 @@
 version: '3.2'
 
-services:
+# Создаем общую сеть проекта, для всех контейнеров
+# Create a general project network for all containers
+networks:
+  anton-kalochelitis-network:
+    driver: bridge
+    external: true
 
+services:
   frontend:
+    container_name: anton-kalochelitis-frontend-yii2
     build: frontend
+    # Подключаем к общей сети проекта с другими контейнерами
+    # Connect to the general network of the project with other containers
+    networks:
+      - anton-kalochelitis-network
     ports:
-      - 20080:80
+      - "${FRONTEND_PORT}:80"
+    depends_on:
+      - mysql
     volumes:
       # Re-use local composer cache via host-volume
       - ~/.composer-docker/cache:/root/.composer/cache:delegated
       # Mount source-code for development
       - ./:/app
+    restart: always
 
   backend:
+    container_name: anton-kalochelitis-backend-yii2
     build: backend
+    # Подключаем к общей сети проекта с другими контейнерами
+    # Connect to the general network of the project with other containers
+    networks:
+      - anton-kalochelitis-network
     ports:
-      - 21080:80
+      - "${BACKEND_PORT}:80"
+    depends_on:
+      - mysql
     volumes:
       # Re-use local composer cache via host-volume
       - ~/.composer-docker/cache:/root/.composer/cache:delegated
       # Mount source-code for development
       - ./:/app
+    restart: always
 
   mysql:
+    container_name: anton-kalochelitis-mysql
     image: mysql:5.7
+    # Подключаем к общей сети проекта с другими контейнерами
+    # Connect to the general network of the project with other containers
+    networks:
+      - anton-kalochelitis-network
+    ports:
+      - "${MYSQL_EXTERNAL_PORT}:3306"
     environment:
-      - MYSQL_ROOT_PASSWORD=verysecret
-      - MYSQL_DATABASE=yii2advanced
-      - MYSQL_USER=yii2advanced
-      - MYSQL_PASSWORD=secret
+      - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
+      - MYSQL_DATABASE=${MYSQL_DATABASE}
+      - MYSQL_USER=${MYSQL_USER}
+      - MYSQL_PASSWORD=${MYSQL_PASSWORD}
+    restart: always
 
-  #pgsql:
-  #  image: postgres:9.5
-  #  environment:
-  #    - POSTGRES_DB=yii2advanced
-  #    - POSTGRES_USER=yii2advanced
-  #    - POSTGRES_PASSWORD=secret
+  phpmyadmin:
+    container_name: anton-kalochelitis-phpmyadmin
+    image: phpmyadmin/phpmyadmin
+    ports:
+      - '${PHPMYADMIN_PORT}:80'
+    # Подключаем к общей сети проекта с другими контейнерами
+    # Connect to the general network of the project with other containers
+    networks:
+      - anton-kalochelitis-network
+    environment:
+      - PMA_ARBITRARY=1
+      - PMA_HOST=mysql
+    depends_on:
+      - mysql
+    restart: always
+
+  redis:
+    image: bitnami/redis
+    container_name: anton-kalochelitis-redis
+    # Подключаем к общей сети проекта с другими контейнерами
+    # Connect to the general network of the project with other containers
+    networks:
+      - anton-kalochelitis-network
+    ports:
+      - "6380:6379"
+    depends_on:
+      - mysql
+    environment:
+      REDIS_PASSWORD: ${REDIS_PASSWORD}
+    restart: always
