--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -72,6 +72,8 @@ services:
     environment:
       - PMA_ARBITRARY=1
       - PMA_HOST=mysql
+    volumes:
+      - "./.docker/mysql:/var/lib/mysql"
     depends_on:
       - mysql
     restart: always
