--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,27 @@
         "yiisoft/yii2": "~2.0.45",
         "yiisoft/yii2-bootstrap5": "~2.0.2",
         "yiisoft/yii2-symfonymailer": "~2.0.3",
-        "yiithings/yii2-dotenv": "dev-master"
+        "yiithings/yii2-dotenv": "dev-master",
+	    "himiklab/yii2-recaptcha-widget" : "*",
+        "kartik-v/yii2-krajee-base": "*",
+        "kartik-v/yii2-widget-activeform": "*",
+        "kartik-v/yii2-widget-affix": "*",
+        "kartik-v/yii2-widget-alert": "*",
+        "kartik-v/yii2-widget-colorinput": "*",
+        "kartik-v/yii2-widget-datepicker": "*",
+        "kartik-v/yii2-widget-datetimepicker": "*",
+        "kartik-v/yii2-widget-depdrop": "*",
+        "kartik-v/yii2-widget-fileinput": "*",
+        "kartik-v/yii2-widget-growl": "*",
+        "kartik-v/yii2-widget-rangeinput": "*",
+        "kartik-v/yii2-widget-rating": "*",
+        "kartik-v/yii2-widget-select2": "*",
+        "kartik-v/yii2-widget-sidenav": "*",
+        "kartik-v/yii2-widget-spinner": "*",
+        "kartik-v/yii2-widget-switchinput": "*",
+        "kartik-v/yii2-widget-timepicker": "*",
+        "kartik-v/yii2-widget-touchspin": "*",
+        "kartik-v/yii2-widget-typeahead": "*"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
