--- a/.gitignore
+++ b/.gitignore
@@ -35,9 +35,11 @@ phpunit.phar
 /.vagrant
 
 # ignore generated files
+/frontend/web/.htaccess
 /frontend/web/index.php
 /frontend/web/index-test.php
 /frontend/web/robots.txt
+/backend/web/.htaccess
 /backend/web/index.php
 /backend/web/index-test.php
 /backend/web/robots.txt
