--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,7 @@
         "kartik-v/yii2-widget-touchspin": "*",
         "kartik-v/yii2-widget-typeahead": "*",
         "nodge/yii2-eauth": "~2.0",
-        "yii2mod/yii2-rbac": "*"
+        "yii2mod/yii2-rbac": ">=2.0"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
